    - add apt_pkg.get_architectures() call
  * apt/cache.py:
    - remove "print" when creating dirs in apt.Cache(rootdir=dir),
      thanks to Martin Pitt
  * fix build against apt in experimental
  * apt/cache.py:
    - set Dir::bin::dpkg if a alternate rootdir is given
      (LP: #885895)
  * apt/package.py:
    - add new "suggests" property, thanks to Christop Groth
  
  [ Tshepang Lekhonkhobe ]
  * rm usage of camelcase in cache.py doc (closes: #626617)
  * grammar fix in the cache.py doc (closes: #626610)
  * apt/debfile.py: Remove the need to explcitly call check() in order
    to get output from require_changes and missing_deps
    (closes: #624379)

 -- Michael Vogt <mvo@debian.org>  Wed, 19 Oct 2011 18:03:42 +0200

python-apt (0.8.1) unstable; urgency=low

  [ Julian Andres Klode ]
  * Breaks: debsecan (<< 0.4.15) [not only << 0.4.14] (Closes: #629512)
  
  [ Michael Vogt ]
  * python/arfile.cc:
    - use APT::Configuration::getCompressionTypes() instead of duplicating
      the supported methods here
  * tests/test_debfile.py:
    - add test for raise on unknown data.tar.xxx
  * tests/test_aptsources_ports.py, tests/test_aptsources.py:
    - use tmpdir during the tests to fix test failure with apt from
      experimental
  * tests/test_apt_cache.py:
    - fix test by providing proper fixture data
    - fix test if sources.list is not readable (as is the case on some
      PPA buildds)
  * apt/package.py:
    - fix py3 compatiblity with print
  * tests/test_all.py:
    - skip all tests if sources.list is not readable (as is the case on
      some builds)
    - packages in marked_install state can also be auto-removable
  * add concept of "ParentComponent" for e.g. ubuntu/multiverse
    that needs universe enabled as well (plus add test)
  * apt/progress/gtk2.py:
    - update to the latest vte API for child-exited (LP: #865388)
  * tests/test_apt_cache.py:
    - add __cmp__ to apt.Package so that sort() sorts by name
      on list of package objects