@@ -24,6 +24,10 @@ python-apt (0.8.2) UNRELEASED; urgency=low
       (LP: #885895)
   * apt/package.py:
     - add new "suggests" property, thanks to Christop Groth
+    - allow Dependency object to be iteratable, this allows to write
+      code like:
+      for or_dep_group in pkg.candidate.dependencies:
+          for dep in or_dep_group: do_something()
   
   [ Tshepang Lekhonkhobe ]
   * rm usage of camelcase in cache.py doc (closes: #626617)
